--- a/java script/javascript300.html
+++ b/java script/javascript300.html
@@ -231,19 +231,19 @@
 
         <h2 class="mt20">제어문</h2>
         <ul>
-            <li><a href="#sample1">01. if문</a></li>
-            <li><a href="#sample2">02. 다중 if문</a></li>
-            <li><a href="#">03. 중첩 if문</a></li>
-            <li><a href="#">04. 삼항 연산자</a></li>
-            <li><a href="#">05. switch문</a></li>
-            <li><a href="#">06. while문</a></li>
-            <li><a href="#">07. do while문</a></li>
-            <li><a href="#">08. for문</a></li>
-            <li><a href="#">09. 중첩 for문</a></li>
-            <li><a href="#">10. for in문</a></li>
-            <li><a href="#">11. for of문</a></li>
-            <li><a href="#">12. break문</a></li>
-            <li><a href="#">13. continue문</a></li>
+            <li><a href="#sample1">01. 선언적함수</a></li>
+            <li><a href="#sample2">02. 익명 함수</a></li>
+            <li><a href="#">03. 매체개변 함수</a></li>
+            <li><a href="#">04. 리턴값 함수</a></li>
+            <li><a href="#">05. 재귀 함수 </a></li>
+            <li><a href="#">06. 콜백 함수</a></li>
+            <li><a href="#">07. 내부 함수</a></li>
+            <li><a href="#">08. 객체 생성자 함수</a></li>
+            <li><a href="#">09. 프로토타입 함수</a></li>
+            <li><a href="#">10. 화살표 함수</a></li>
+            <li><a href="#">11. 아규먼트 함수</a></li>
+            <li><a href="#">12. 즉시실행 함수</a></li>
+            <li><a href="#">13. 파라미터 함수</a></li>
         </ul>
 
     <hr>
