--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="webstoryboy">
     <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">
-    <meta name="keywords" content="웹스토리보이, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, webstoryboy, publisher, css3, html, markup, design">
+    <meta name="keywords" content="김우석, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, webstoryboy, publisher, css3, html, markup, design">
     <title>김우석 | Wooseok</title>
 
     <!-- css -->
@@ -108,7 +108,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="http://webstoryboy.co.kr">wooseok</a>
+                <a class="brand" href="http://wooseok98.tistory.com">wooseok</a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="https://wooseok98.tistory.com/">Tistory</a></li>
