--- a/java script/javascript300.html
+++ b/java script/javascript300.html
@@ -229,7 +229,7 @@
     </ol>
 
 
-        <h2 class="mt20">제어문</h2>
+        <h2 class="mt20">데이터 실행 : 함수</h2>
         <ul>
             <li><a href="#sample1">01. 선언적함수</a></li>
             <li><a href="#sample2">02. 익명 함수</a></li>
