--- a/class/index.html
+++ b/class/index.html
@@ -80,7 +80,7 @@
     <div class="bs-header bgs1" id="content">
         <div class="container">
             <h1>Class v1.0 &lt;/doc&gt;</h1>
-            <p><a href="https://webstoryboy.co.kr" target="_blank">webstoryboy.co.kr</a></p>
+            <p><a href="low1ife.github.io" target="_blank">low1ife.github.io</a></p>
         </div>
     </div>
 
