--- a/java script/javascript100.html
+++ b/java script/javascript100.html
@@ -175,7 +175,7 @@
 
         ol {
             list-style: none;
-            margin-bottom: 40px;
+          
         }
 
         ol li {
@@ -228,7 +228,7 @@
       
     </ol>
 
-    <h2>데이터 저장하기</h2>
+    <h2 class="mt20">데이터 저장하기</h2>
     <ul>
         <li> 01. 변수 : 데이터 저장</li>
         <li> 02. 변수 : 데이터 저장 + 데이터 변경</li>
