--- a/java script/javascript200.html
+++ b/java script/javascript200.html
@@ -793,20 +793,21 @@
         table += "</table>";
         
         document.write(table);
+        document.write("<br>");
     }
     
-     //sample101 : 테이블 만들기
+     //sample102 
      {
-        document.write("*** 101. 테이블 만들기 ***<br>");
+        document.write("*** 102. 숙제 ***<br>");
 
-       let num = 1;
+       let num = 100;
        let table = "<table>";
 
         for( let  i=1; i<=10; i++){
         table += "<tr>";
         for( let j=1; j<=10; j++){
             table += "<td>"+ num +"</td>";
-            num ++;
+            num --;
         }
         table += "</tr>";
         }
