--- a/java script/javascript200.html
+++ b/java script/javascript200.html
@@ -782,12 +782,12 @@
        let table = "<table>";
 
         for( let  i=1; i<=10; i++){
-        table += "<tr>";
-        for( let j=1; j<=10; j++){
-            table += "<td>"+ num +"</td>";
-            num ++;
-        }
-        table += "</tr>";
+            table += "<tr>";
+            for( let j=1; j<=10; j++){
+                table += "<td>"+ num +"</td>";
+                num ++;
+            }
+            table += "</tr>";
         }
    
         table += "</table>";
@@ -804,12 +804,34 @@
        let table = "<table>";
 
         for( let  i=1; i<=10; i++){
-        table += "<tr>";
-        for( let j=1; j<=10; j++){
-            table += "<td>"+ num +"</td>";
-            num --;
+            table += "<tr>";
+            for( let j=1; j<=10; j++){
+                table += "<td>"+ num +"</td>";
+                num--;
+            }
+            table += "</tr>";
         }
-        table += "</tr>";
+   
+        table += "</table>";
+        
+        document.write(table);
+        document.write("<br>");
+    }
+
+    //sample103 : 짝수만 나오게
+    {
+        document.write("*** 102. 숙제 ***<br>");
+
+       let num = 2;
+       let table = "<table>";
+
+        for( let  i=2; i<=10; i++){
+            table += "<tr>";
+            for( let j=2; j<=10; j++){
+                table += "<td>"+ num +"</td>";
+                num--;
+            }
+            table += "</tr>";
         }
    
         table += "</table>";
