--- a/java script/javascript300.html
+++ b/java script/javascript300.html
@@ -227,6 +227,9 @@
         <li><a href="javascript200.html">반복문</a></li>
       
     </ol>
+    <ol>
+        <li><a href="javascript400.html">알고리즘 연습</a></li>
+    </ol>
 
 
         <h2 class="mt20">데이터 실행 : 함수</h2>
@@ -319,7 +322,7 @@
 <hr>
 <!--sample6-->
 <div id="sample1" class="sample">
-    <h2>06. 선언적함수  <span class="dot"></span></h2>
+    <h2>05. 재귀함수  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
             
