--- a/java script/javascript300.html
+++ b/java script/javascript300.html
@@ -274,8 +274,8 @@
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
     const func = function(){
-        document.write("*** 02. 익명 함수 ***<br>"); 
-        document.write("02. 함수가 실행되었습니다.<br><br>");
+        document.write("*** 02. 익명 함수 ***"); 
+        document.write("02. 함수가 실행되었습니다.");
     }
     func();                  
 }
@@ -291,10 +291,10 @@
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
     function func(str){
-        document.write("*** 03. 매게변수 함수 ***<br>"); 
+        document.write("*** 03. 매게변수 함수 ***"); 
         document.write(str);
     }
-    func("함수가 실행되었습니다.<br><br>");                  
+    func("함수가 실행되었습니다.");                  
 }
 </code></pre>
     </div>
@@ -307,12 +307,12 @@
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
     function func(){
-        const str = "함수가 실행되었습니다.<br><br>";
+        const str = "함수가 실행되었습니다.";
         return str;
     }
             
 
-    document.write("*** 04. 리턴값 함수 ***<br>");
+    document.write("*** 04. 리턴값 함수 ***");
     document.write(func());          
 }
 </code></pre>
