--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Wooseok">
+    <meta name="author" content="김우석">
     <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">
     <meta name="keywords" content="김우석, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, publisher, css3, html, markup, design">
     <title>김우석 | Wooseok</title>
@@ -31,7 +31,7 @@
     <meta property="og:title" content="김우석" />
     <meta property="og:url" content="http://richclub8.dothome.co.kr/responsive/html5/index.html" />
     <meta property="og:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
-    <meta property="og:site_name" content="Wooseok" />
+    <meta property="og:site_name" content="김우석" />
     <meta property="og:description" content="웹과 관련된 정보를 제공합니다." />
 
     <!-- twitter meta tags -->
