--- a/index.html
+++ b/index.html
@@ -168,7 +168,6 @@
                         <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".reference">REFERENCE</a></li>
                         <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".site">SITE</a></li>
                         <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".design">DESIGN</a></li>
-                        <li class="webstandard"><a href="#filter-color-webstandard" data-filter-value=".css">CSS</a></li>
                     </ul>
                 </div>
             </div>
@@ -219,7 +218,7 @@
                     <!-- //box -->
 
                      <!-- box -->
-                     <section class="color-shape class">
+                     <section class="color-shape site">
                         <a href="layout/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -233,6 +232,48 @@
                                     <h5>LAYOUT</h5>
                                     <p>레이아웃</p>
                                     <span>LAYOUT</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                     <!-- box -->
+                     <section class="color-shape reference">
+                        <a href="refer-html/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">HTML</span>
+                                    <span class="overlay-text-thumb-donut">레퍼런스</span>
+                                    <span class="overlay-text-thumb1-donut">레퍼런스</span>
+                                    <span class="overlay-text-thumb2-donut">HTML</span>
+                                </div>
+                                <img src="assets/img/svg-lemon.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>HTML</h5>
+                                    <p>레퍼런스</p>
+                                    <span>HTML</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                     <!-- box -->
+                     <section class="color-shape reference">
+                        <a href="refer-css/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">CSS</span>
+                                    <span class="overlay-text-thumb-donut">레퍼런스</span>
+                                    <span class="overlay-text-thumb1-donut">레퍼런스</span>
+                                    <span class="overlay-text-thumb2-donut">CSS</span>
+                                </div>
+                                <img src="assets/img/svg-macaron-cookies.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>CSS</h5>
+                                    <p>레퍼런스</p>
+                                    <span>HTML</span>
                                 </div>
                             </div>
                         </a>
