--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -62,7 +62,7 @@
             font-family: 'GmarketSansBold';
             font-size: 80px;
             text-align: center;
-            padding: 10% 10% 5%;
+            padding: 15% 5% 5%;
         }
 
         main h2 em {
@@ -98,7 +98,7 @@
 
         .refer table th {
             border: 1px solid #aaa;
-            padding: 15px 10px;
+            padding: 15px;
             font-weight: bold;
             background-color: #f5f5f5;
         }
@@ -121,21 +121,27 @@
             }
         }
         @media (max-width:800px){
+            #content{
+                width: 96%;
+            }
             #header h1 {
                 font-size: 16px;
             }
             #header strong {
                 font-size: 14px;
+                bottom: 10%;
             }
             main h2 {
                 font-size: 30px;
             }
             .refer {
                 padding: 10px;
+                margin-bottom: 100px;
             }
             .refer h3{
                 margin-bottom: 10px;
                 font-size: 16px;
+                padding: 6px 10px;
             }
             .refer table th{
                 padding: 8px;
@@ -155,14 +161,14 @@
     <!--//header-->
 
 
-    <main id="contnet">
+    <main id="content">
         <h2>CSS <em>래퍼런스 북</em></h2>
         <section class="refer">
             <h3>Alphabet</h3>
             <table>
                 <colgroup>
                     <col style="width: 30%">
-                    <col style="width: 30%">
+                    <col style="width: 70%">
                 </colgroup>
                 <thead>
                     <tr>
