--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -115,6 +115,20 @@
             color: #fff;
             cursor : crosshair;
         }
+        .link li {
+            list-style: none;
+        }
+        .link li a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px;
+            background: #000;
+            display: inline-block;
+            margin-bottom: 10px;
+        }
+        .link li a:hover {
+            background: #00DB72;
+        }
         @media (max-width:1220px){
             #content{
                 width: 96%;
@@ -163,6 +177,9 @@
 
     <main id="content">
         <h2>CSS <em>래퍼런스 북</em></h2>
+        <ul class="link">
+            <li><a href="../java script/javascript602-sample01.html">CSS 속성 첫 글자 검색하기</a></li>
+        </ul>
         <section class="refer">
             <h3>Alphabet</h3>
             <table>
