--- a/java script/javascript300.html
+++ b/java script/javascript300.html
@@ -270,24 +270,24 @@
         <ul>
             <li><a href="#sample1">01. 선언적함수</a></li>
             <li><a href="#sample2">02. 익명 함수</a></li>
-            <li><a href="#">03. 매체개변 함수</a></li>
-            <li><a href="#">04. 리턴값 함수</a></li>
-            <li><a href="#">05. 화살표 함수 : 선언적 함수</a></li>
-            <li><a href="#">06. 화살표 함수 : 익명함수</a></li>
-            <li><a href="#">07. 화살표 함수 : 리턴값 함수</a></li>
-            <li><a href="#">08. 화살표 함수 : 익명함수 + 매게변수 + 리턴값</a></li>
-            <li><a href="#">09. 화살표 함수 : 익명함수 + 매게변수 + 리턴값 + 괄호 생략</a></li>
-            <li><a href="#">10. 화살표 함수 : 익명함수 + 매게변수 + 리턴값 + 괄호 생략 + 리턴 생략</a></li>
-            <li><a href="#">11. 화살표 함수 : 선언적 함수 + 매게변수 + 리턴값 + 괄호 생략 + 리턴 생략</a></li>
-            <li><a href="#">05. 재귀 함수 </a></li>
-            <li><a href="#">06. 콜백 함수</a></li>
-            <li><a href="#">07. 내부 함수</a></li>
-            <li><a href="#">08. 객체 생성자 함수</a></li>
-            <li><a href="#">09. 프로토타입 함수</a></li>
-            <li><a href="#">10. 화살표 함수</a></li>
-            <li><a href="#">11. 아규먼트 함수</a></li>
-            <li><a href="#">12. 즉시실행 함수</a></li>
-            <li><a href="#">13. 파라미터 함수</a></li>
+            <li><a href="#sample3">03. 매체개변 함수</a></li>
+            <li><a href="#sample4">04. 리턴값 함수</a></li>
+            <li><a href="#sample5">05. 화살표 함수 : 선언적 함수</a></li>
+            <li><a href="#sample6">06. 화살표 함수 : 익명함수</a></li>
+            <li><a href="#sample7">07. 화살표 함수 : 리턴값 함수</a></li>
+            <li><a href="#sample8">08. 화살표 함수 : 익명함수 + 매게변수 + 리턴값</a></li>
+            <li><a href="#sample9">09. 화살표 함수 : 익명함수 + 매게변수 + 리턴값 + 괄호 생략</a></li>
+            <li><a href="#sample10">10. 화살표 함수 : 익명함수 + 매게변수 + 리턴값 + 괄호 생략 + 리턴 생략</a></li>
+            <li><a href="#sample11">11. 화살표 함수 : 선언적 함수 + 매게변수 + 리턴값 + 괄호 생략 + 리턴 생략</a></li>
+            <li><a href="#sample">05. 재귀 함수 </a></li>
+            <li><a href="#sample">06. 콜백 함수</a></li>
+            <li><a href="#sample">07. 내부 함수</a></li>
+            <li><a href="#sample">08. 객체 생성자 함수</a></li>
+            <li><a href="#sample">09. 프로토타입 함수</a></li>
+            <li><a href="#sample">10. 화살표 함수</a></li>
+            <li><a href="#sample">11. 아규먼트 함수</a></li>
+            <li><a href="#sample">12. 즉시실행 함수</a></li>
+            <li><a href="#sample">13. 파라미터 함수</a></li>
         </ul>
 
     <hr>
@@ -310,7 +310,7 @@
     <hr>
 
    <!--sample2-->
-   <div id="sample1" class="sample">
+   <div id="sample2" class="sample">
     <h2>02. 익명함수  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -327,7 +327,7 @@
 <hr>
 
 <!--sample3-->
-<div id="sample1" class="sample">
+<div id="sample3" class="sample">
     <h2>03. 매게변수 함수  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -344,7 +344,7 @@
 <hr>
 
     <!--sample4-->
-<div id="sample1" class="sample">
+<div id="sample4" class="sample">
     <h2>04. 리턴값 함수  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -365,7 +365,7 @@
 <hr>
 
 <!--sample5-->
-<div id="sample1" class="sample">
+<div id="sample5" class="sample">
     <h2>05. 화살표 함수 : 선언적함수  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -383,7 +383,7 @@
 <hr>
 
 <!--sample6-->
-<div id="sample1" class="sample">
+<div id="sample6" class="sample">
     <h2>06. 화살표 함수 : 익명함수  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -401,7 +401,7 @@
 <hr>
 
 <!--sample7-->
-<div id="sample1" class="sample">
+<div id="sample7" class="sample">
     <h2>07. 화살표 함수 : 리턴값 함수  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -428,7 +428,7 @@
 <hr>
 
 <!--sample8-->
-<div id="sample1" class="sample">
+<div id="sample8" class="sample">
     <h2>08. 화살표 함수 :  익명함수 + 매게변수 + 리턴값  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -447,7 +447,7 @@
 <hr>
 
 <!--sample5-->
-<div id="sample1" class="sample">
+<div id="sample9" class="sample">
     <h2>09. 화살표 함수 : 익명함수 + 매게변수 + 리턴값 + 괄호 생략 <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -466,7 +466,7 @@
 <hr>
 
 <!--sample10-->
-<div id="sample1" class="sample">
+<div id="sample10" class="sample">
     <h2>10. 화살표 함수 : 익명함수 + 매게변수 + 리턴값 + 괄호 생략 + 리턴 생략  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -484,7 +484,7 @@
 <hr>
 
 <!--sample11-->
-<div id="sample1" class="sample">
+<div id="sample11" class="sample">
     <h2>11. 화살표 함수 :  선언적함수 + 매게변수 + 리턴값 + 괄호 생략 + 리턴 생략 <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -499,25 +499,9 @@
 </div>
 <!--sample11-->
 
-<hr>
 
-<!--sample5-->
-<div id="sample1" class="sample">
-    <h2>05. 화살표 함수 : 선언적함수  <span class="dot"></span></h2>
-    <div class="code">
-        <pre class="line-numbers"><code class="language-js"> {
-                
-}
-</code></pre>
-    </div>
-</div>
-<!--sample5-->
 
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
+
 
 
 
