--- a/java script/javascript400.html
+++ b/java script/javascript400.html
@@ -270,15 +270,15 @@
 
         <h2 class="mt20">알고리즘</h2>
         <ul>
-            <li><a href="#">01. 1부터 100까지 출력하기</a></li>
-            <li><a href="#">02. 1부터 100까지 : 짝수만</a></li>
-            <li><a href="#">03. 1부터 100까지 : 5의 배수만</a></li>
-            <li><a href="#">04. 1부터 100까지 : 짝수는 빨간색, 홀수는 파란색 </a></li>
-            <li><a href="#">05. 1부터 100까지의 합</a></li>
-            <li><a href="#">06. 구구단 출력하기</a></li>
-            <li><a href="#">07. 테이블 만들기 1</a></li>
-            <li><a href="#">08. 테이블 만들기 2</a></li>
-            <li><a href="#">09. 테이블 만들기 3 - 짝수만</a></li>
+            <li><a href="#sample1">01. 1부터 100까지 출력하기</a></li>
+            <li><a href="#sample2">02. 1부터 100까지 : 짝수만</a></li>
+            <li><a href="#sample3">03. 1부터 100까지 : 5의 배수만</a></li>
+            <li><a href="#sample4">04. 1부터 100까지 : 짝수는 빨간색, 홀수는 파란색 </a></li>
+            <li><a href="#sample5">05. 1부터 100까지의 합</a></li>
+            <li><a href="#sample6">06. 구구단 출력하기</a></li>
+            <li><a href="#sample7">07. 테이블 만들기 1</a></li>
+            <li><a href="#sample8">08. 테이블 만들기 2</a></li>
+            <li><a href="#sample9">09. 테이블 만들기 3 - 짝수만</a></li>
         </ul>
 
     <hr>
@@ -299,7 +299,7 @@
     <hr>
 
    <!--sample2-->
-   <div id="sample1" class="sample">
+   <div id="sample2" class="sample">
     <h2>02. 1부터 100까지 : 짝수  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -316,7 +316,7 @@
 <hr>
 
 <!--sample3-->
-<div id="sample1" class="sample">
+<div id="sample3" class="sample">
     <h2>03. 1부터 100까지 : 5의 배수  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -332,7 +332,7 @@
 <!--sample3-->
 <hr>
     <!--sample4-->
-<div id="sample1" class="sample">
+<div id="sample4" class="sample">
     <h2>04. 1부터 100까지 : 짝수는 빨간색, 홀수는 파란색  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {  
@@ -354,7 +354,7 @@
 
 
 <!--sample5-->
-<div id="sample1" class="sample">
+<div id="sample5" class="sample">
     <h2>05. 1부터 100까지의 합  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -374,7 +374,7 @@
 <hr>
 
 <!--sample6-->
-<div id="sample1" class="sample">
+<div id="sample6" class="sample">
     <h2>06. 구구단 출력하기  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -407,7 +407,7 @@
 <hr>
 
 <!--sample7-->
-<div id="sample1" class="sample">
+<div id="sample7" class="sample">
     <h2>07. 테이블 만들기 1  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -436,7 +436,7 @@
 
 <hr>
 <!--sample8-->
-<div id="sample1" class="sample">
+<div id="sample8" class="sample">
     <h2>08. 테이블 만들기 2  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -466,7 +466,7 @@
 <hr>
 
 <!--sample1-->
-<div id="sample1" class="sample">
+<div id="sample9" class="sample">
     <h2>09. 테이블 만들기 3 - 짝수만  <span class="dot"></span></h2>
     <div class="code">
         <pre class="line-numbers"><code class="language-js"> {
@@ -503,12 +503,7 @@
 </div>
 <!--sample1-->
 
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
-<hr>
+
 
 
 
