--- a/java script/javascript300.html
+++ b/java script/javascript300.html
@@ -279,15 +279,14 @@
             <li><a href="#sample9">09. 화살표 함수 : 익명함수 + 매게변수 + 리턴값 + 괄호 생략</a></li>
             <li><a href="#sample10">10. 화살표 함수 : 익명함수 + 매게변수 + 리턴값 + 괄호 생략 + 리턴 생략</a></li>
             <li><a href="#sample11">11. 화살표 함수 : 선언적 함수 + 매게변수 + 리턴값 + 괄호 생략 + 리턴 생략</a></li>
-            <li><a href="#sample">05. 재귀 함수 </a></li>
-            <li><a href="#sample">06. 콜백 함수</a></li>
-            <li><a href="#sample">07. 내부 함수</a></li>
-            <li><a href="#sample">08. 객체 생성자 함수</a></li>
-            <li><a href="#sample">09. 프로토타입 함수</a></li>
-            <li><a href="#sample">10. 화살표 함수</a></li>
-            <li><a href="#sample">11. 아규먼트 함수</a></li>
-            <li><a href="#sample">12. 즉시실행 함수</a></li>
-            <li><a href="#sample">13. 파라미터 함수</a></li>
+            <li><a href="#sample12">12. 내부 함수 </a></li>
+            <li><a href="#sample13">13. 즉시실행 함수</a></li>
+            <li><a href="#sample14">14. 파라미터 함수</a></li>
+            <li><a href="#sample15">15. 아규먼트 생성자 함수</a></li>
+            <li><a href="#sample16">16. 재귀 함수</a></li>
+            <li><a href="#sample17">17. 콜백 함수</a></li>
+            <li><a href="#sample18">18. 콜백 함수 : 반복문</a></li>
+            <li><a href="#sample19">19. 콜백 함수 : 동기/비동기</a></li>
         </ul>
 
     <hr>
@@ -499,6 +498,234 @@
 </div>
 <!--sample11-->
 
+<hr>
+
+<!--sample12-->
+<div id="sample12" class="sample">
+    <h2>12. 내부함수 <span class="dot"></span></h2>
+    <div class="code">
+        <pre class="line-numbers"><code class="language-js"> {
+    document.write("*** 12. 내부함수***<br>");
+
+    function func(){
+    function funA(){
+        document.write("함수A가 실행되었습니다.<br>");
+    }
+    funA();
+    function funB(){
+        document.write("함수B가 실행되었습니다.<br><br>");
+    }
+    funB();
+    }
+    func();
+}
+</code></pre>
+    </div>
+</div>
+<!--sample12-->
+
+<hr>
+
+<!--sample13-->
+<div id="sample13" class="sample">
+    <h2>13. 즉시실행함수 <span class="dot"></span></h2>
+    <div class="code">
+        <pre class="line-numbers"><code class="language-js"> {
+    document.write("*** 13. 즉시실행함수***<br>");
+
+    (function(){
+        document.write("함수가 실행되었습니다.<br><br>");
+    })();
+}
+</code></pre>
+    </div>
+</div>
+<!--sample13-->
+
+<hr>
+
+<!--sample14-->
+<div id="sample14" class="sample">
+    <h2>14. 파라미터함수 <span class="dot"></span></h2>
+    <div class="code">
+        <pre class="line-numbers"><code class="language-js"> {
+    document.write("*** 14. 파라미터함수***<br>");
+
+    // function func(str){
+    //     if( str == null ){
+    //         str = "함수가 실행되었습니다.<br><br>";
+    //         document.write(str);
+    //     }
+    // }
+    // func();
+
+    function func( str = "함수가 실행되었습니다.<br><br>"){
+        document.write(str);
+    }
+    func();
+}
+</code></pre>
+    </div>
+</div>
+<!--sample14-->
+
+<hr>
+
+<!--sample15-->
+<div id="sample15" class="sample">
+    <h2>15. 아규먼트함수 <span class="dot"></span></h2>
+    <div class="code">
+        <pre class="line-numbers"><code class="language-js"> {
+    document.write("*** 15. 아규먼트함수***<br>");
+
+    function func(strA, strB){
+        //document.write(strA, "<br>");
+        //document.write(strB, "<br>");
+        document.write(arguments[0], "<br>");
+        document.write(arguments[1], "<br>");
+    }
+    func("함수 A가 실행되었습니다.", "함수 B가 실행되었습니다.<br>")
+}
+</code></pre>
+    </div>
+</div>
+<!--sample15-->
+
+<hr>
+
+<!--sample16-->
+<div id="sample16" class="sample">
+    <h2>16. 재귀함수 <span class="dot"></span></h2>
+    <div class="code">
+        <pre class="line-numbers"><code class="language-js"> {
+    document.write("*** 16. 재귀함수***<br>");
+
+    // function func(){
+    //     document.write("함수가 실행되었습니다.<br>")
+    //     func()
+    // }
+    // func()
+
+    function func(num){
+        if( num &lt;= 1 ){
+            document.write("함수가 실행되었습니다.<br>");
+        }else {
+            document.write("함수가 실행되었습니다.<br>");
+            func(num-1);
+        }
+    }
+    func(5);
+}
+</code></pre>
+    </div>
+</div>
+<!--sample16-->
+
+<hr>
+
+<!--sample17-->
+<div id="sample17" class="sample">
+    <h2>17. 콜백함수 <span class="dot"></span></h2>
+    <div class="code">
+        <pre class="line-numbers"><code class="language-js"> {
+    document.write("<br>*** 17. 콜백함수***<br>");
+
+    function funA(){
+        document.write("함수A가 실행되었습니다.<br>");
+    }
+    function funB(str){
+        document.write("함수B가 실행되었습니다.<br>");
+        str(); //funA();
+    }
+    funB(funA);
+}
+</code></pre>
+    </div>
+</div>
+<!--sample17-->
+
+<hr>
+
+<!--sample18-->
+<div id="sample18" class="sample">
+    <h2>18. 콜백함수 : 반복문 <span class="dot"></span></h2>
+    <div class="code">
+        <pre class="line-numbers"><code class="language-js"> {
+    document.write("<br>*** 18. 콜백함수 : 반복문***<br>");
+
+    function func(){
+        document.write("함수가 실행되었습니다.<br>");
+    }
+    function callback(str){
+
+        for( let i=1; i&lt;=5; i++ ){
+            str(i);
+        }
+    }
+    callback(func);
+}
+</code></pre>
+    </div>
+</div>
+<!--sample18-->
+
+<hr>
+
+<!--sample19-->
+<div id="sample19" class="sample">
+    <h2>19. 콜백함수 : 동기/비동기 <span class="dot"></span></h2>
+    <div class="code">
+        <pre class="line-numbers"><code class="language-js"> {
+    document.write("<br>*** 19. 콜백함수 : 동기/비동기***<br>");
+    
+    function funA(){
+        console.log("funA가 실행되었습니다.");
+    }
+    function funB(){
+        console.log("funB가 실행되었습니다.");
+    }
+    funB();
+    funA();
+
+    //02
+    function funC(){
+        setTimeout(function(){
+            console.log("funC가 실행되었습니다.");
+        }, 1000);
+    }
+    function funD(){
+        console.log("funD가 실행되었습니다.");
+    }
+    funC();
+    funD();
+
+    //03
+    function funE(callback){
+        setTimeout(() =>{
+            console.log("funE가 실행되었습니다.");
+            callback();
+        },1000);
+    }
+    function funF(){
+        console.log("funF가 실행되었습니다.");
+    }
+    funE(funF);
+}
+</code></pre>
+    </div>
+</div>
+<!--sample19-->
+
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+<hr>
+
 
 
 
@@ -640,6 +867,161 @@
             func = str => str;
 
             document.write(func("함수가 실행되었습니다.<br><br>"));
+        }
+
+        //sample12
+        //12. 내부함수
+        {
+            document.write("*** 12. 내부함수***<br>");
+
+            function func(){
+            function funA(){
+                document.write("함수A가 실행되었습니다.<br>");
+            }
+            funA();
+            function funB(){
+                document.write("함수B가 실행되었습니다.<br><br>");
+            }
+            funB();
+        }
+        func();
+    }
+
+        //sample13
+        //13. 즉시실행함수
+        {
+            document.write("*** 13. 즉시실행함수***<br>");
+
+            (function(){
+                document.write("함수가 실행되었습니다.<br><br>");
+            })();
+        }
+
+        //sample14
+        //14. 파라미터함수
+        {
+            document.write("*** 14. 파라미터함수***<br>");
+
+            // function func(str){
+            //     if( str == null ){
+            //         str = "함수가 실행되었습니다.<br><br>";
+            //         document.write(str);
+            //     }
+            // }
+            // func();
+
+            function func( str = "함수가 실행되었습니다.<br><br>"){
+                document.write(str);
+            }
+            func();
+        }
+
+        //sample15
+        //15. 아규먼트함수
+        {
+            document.write("*** 15. 아규먼트함수***<br>");
+
+            function func(strA, strB){
+                //document.write(strA, "<br>");
+                //document.write(strB, "<br>");
+                document.write(arguments[0], "<br>");
+                document.write(arguments[1], "<br>");
+            }
+            func("함수 A가 실행되었습니다.", "함수 B가 실행되었습니다.<br>")
+        }
+
+        //sample16
+        //16. 재귀함수 : 함수 정의문 내에서 자기 자신을 또 다시 호출하는 함수
+        {
+            document.write("*** 16. 재귀함수***<br>");
+
+            // function func(){
+            //     document.write("함수가 실행되었습니다.<br>")
+            //     func()
+            // }
+            // func()
+
+            function func(num){
+                if( num <= 1 ){
+                    document.write("함수가 실행되었습니다.<br>");
+                }else {
+                    document.write("함수가 실행되었습니다.<br>");
+                    func(num-1);
+                }
+            }
+            func(5);
+        }
+
+        //sample17
+        //17. 콜백 함수 : 첫 함수가 실행시키고 난 뒤에 다른 함수를 다시 호출하는 함수
+        //
+        {
+            document.write("<br>*** 17. 콜백함수***<br>");
+
+            function funA(){
+                document.write("함수A가 실행되었습니다.<br>");
+            }
+            function funB(str){
+                document.write("함수B가 실행되었습니다.<br>");
+                str(); //funA();
+            }
+            funB(funA);
+        }
+
+        //sample18
+        //18. 콜백함수 : 반복문
+        {
+            document.write("<br>*** 18. 콜백함수 : 반복문***<br>");
+
+            function func(){
+                document.write("함수가 실행되었습니다.<br>");
+            }
+            function callback(str){
+
+                for( let i=1; i<=5; i++ ){
+                    str(i);
+                }
+            }
+            callback(func);
+        }
+
+        //sample19
+        //19. 콜백함수 : 동기/비동기
+        {
+            document.write("<br>*** 19. 콜백함수 : 동기/비동기***<br>");
+            
+            function funA(){
+                console.log("funA가 실행되었습니다.");
+            }
+            function funB(){
+                console.log("funB가 실행되었습니다.");
+            }
+            funB();
+            funA();
+
+            //02
+            function funC(){
+                setTimeout(function(){
+                    console.log("funC가 실행되었습니다.");
+                }, 1000);
+            }
+            function funD(){
+                console.log("funD가 실행되었습니다.");
+            }
+            funC();
+            funD();
+
+            //03
+            function funE(callback){
+                setTimeout(() =>{
+                    console.log("funE가 실행되었습니다.");
+                    callback();
+                },1000);
+            }
+            function funF(){
+                console.log("funF가 실행되었습니다.");
+            }
+            funE(funF);
         }
     </script>
 </body>
