--- a/index.html
+++ b/index.html
@@ -273,7 +273,28 @@
                                 <div class="img-text donutImg">
                                     <h5>CSS</h5>
                                     <p>레퍼런스</p>
-                                    <span>HTML</span>
+                                    <span>CSS</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                     <!-- box -->
+                     <section class="color-shape reference">
+                        <a href="refer-css/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">Wireframe</span>
+                                    <span class="overlay-text-thumb-donut">와이어 프레임</span>
+                                    <span class="overlay-text-thumb1-donut">와이어 프레임</span>
+                                    <span class="overlay-text-thumb2-donut">Wireframe</span>
+                                </div>
+                                <img src="assets/img/svg-macaron-cookies.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>Wireframe</h5>
+                                    <p>와이어 프레임</p>
+                                    <span>Wireframe</span>
                                 </div>
                             </div>
                         </a>
