--- a/java script/javascript601.html
+++ b/java script/javascript601.html
@@ -1821,7 +1821,7 @@
             
             document.querySelector(".sample14_N3").innerHTML = "3";
             document.querySelector(".sample14_Q3").innerHTML = "javascript";
-            document.querySelector(".sample14_M3").innerHTML = "map()";
+            document.querySelector(".sample14_M3").innerHTML = "map";
             document.querySelector(".sample14_R3").innerHTML = result3;
         }
     </script>
