--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
                         </a>
                     </section>
                     <!-- //box -->
-
+ 
                      <!-- box -->
                      <section class="color-shape reference">
-                        <a href="wireframe/index.html" target="_blank">
+                        <a href="site/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">Wireframe</span>
