--- a/java script/javascript602.html
+++ b/java script/javascript602.html
@@ -336,7 +336,7 @@
         <li><a href="#sample05">05. 문자열 메서드 : includes() : 문자열 포함 여부 : 반환(불린)</a></li>
         <li><a href="#sample05">05. 문자열 메서드 : startWith() : 문자열 포함 여부 : 반환(불린)</a></li> 
         <li><a href="#sample05">05. 문자열 메서드 : endWith() : 문자열 포함 여부 : 반환(불린)</a></li>
-        <li><a href="#sample06">06. 문자열 메서드 : charAt() : 지정한 인덱스의 문자 추출 : 반환(문자)</a><a class="sam" href ="javascriptSample01.html"></a></li>
+        <li><a href="#sample06">06. 문자열 메서드 : charAt() : 지정한 인덱스의 문자 추출 : 반환(문자)</a><a class="sam" href ="javascriptSample01.html">chartAt()</a></li>
         <li><a href="#sample07">07. 문자열 메서드 : slice() : 지정한 범위 내 문자열을 추출 : 반환(문자열)</a></li>
         <li><a href="#sample07">07. 문자열 메서드 : subString() : 지정한 범위 내 문자열을 추출 : 반환(문자열)</a></li>
         <li><a href="#sample07">07. 문자열 메서드 : substr() : 지정한 범위 내 문자열을 추출 : 반환(문자열)</a></li>
