--- a/java script/javascript606.html
+++ b/java script/javascript606.html
@@ -228,6 +228,13 @@
         .ol6::before{
             content : "데이터 공부 하기 : ";
         }
+        .sam {
+            background-color: #000;
+            color: #fff;
+            border-radius: 30px;
+            padding: 0.1em 1.5em;
+            font-size: 0.8em;
+        }
     </style>
 </head>
 
@@ -273,15 +280,19 @@
 
         <h2 class="mt20">샘플</h2>
         <ul>
-            <li><a href="javascript602-1.html">01. CSS  속성 첫 글자만 검색하기</a></li>
-            <li><a href="javascript602-2.html">02. CSS 속성 검색하면 설명 보여주기</a></li>
-            <li><a href="javascript602-3.html">03. CSS 속성 정렬하기</a></li>
+            <li><a href="javascriptSample01.html">01. CSS  속성 첫 글자만 검색하기</a><a class="sam" href="javascript602.html">charAt()</a></li>
+            <li><a href="javascriptSample02.html">02. CSS 속성 검색하면 설명 보여주기</a><a class="sam" href="javascript602.html">find()</a></li>
+            <li><a href="javascriptSample03.html">03. CSS 속성 정렬하기</a><a class="sam" href="javascript602.html">sort()</a></li>
         </ul>
         <h2 class="mt20">샘플</h2>
         <ul>
             <li><a href="javascript603-1.html">01. HTML  속성 첫 글자만 검색하기</a></li>
             <li><a href="javascript603-2.html">02. HTML 속성 검색하면 설명 보여주기</a></li>
             <li><a href="javascript603-3.html">03. HTML 속성 정렬하기</a></li>
+        </ul>
+        <h2 class="mt20">날짜 객체 샘플</h2>
+        <ul>
+            <li><a href="javascriptSample04.html">01. 시계 만들기</a><a class="sam" href="javascript604.html">getHours()</a></li>
         </ul>
 
 
