--- a/site/main.html
+++ b/site/main.html
@@ -18,7 +18,20 @@
 <body>
     <!-- header -->
     <header id="header">
-
+        <div class="container">
+            <div class="header">
+        <h1><a href="main.html">Wooseok98</a></h1>
+        <nav class="menu">
+            <ul>
+                <li><a href="#">메뉴 아이템</a></li>
+                <li><a href="#">메뉴 아이템</a></li>
+                <li><a href="#">메뉴 아이템</a></li>
+                <li><a href="#">메뉴 아이템</a></li>
+                <li><a href="#">메뉴 아이템</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
     </header>
     <!-- header -->
     <section>
