--- a/refer-html/index.html
+++ b/refer-html/index.html
@@ -178,7 +178,7 @@
     <main id="content">
         <h2>HTML <em>래퍼런스 북</em></h2>
         <ul class="link">
-            <li><a href="../java script/javascript602-sample02.html">HTML 속성 첫 글자 검색하기</a></li>
+            <li><a href="../java script/javascript603-1.html">HTML 속성 첫 글자 검색하기</a></li>
         </ul>
         <section class="refer">
             <h3>Alphabet</h3>
