--- a/refer-html/index.html
+++ b/refer-html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Css Reference</title>
+    <title>HTML Reference</title>
     <style>
         @font-face {
             font-family: 'GmarketSansMedium';
@@ -89,7 +89,13 @@
             background-color: #00DB72;
             color: #fff;
         }
-
+        .refer h3 a {
+                text-decoration: none;
+                color: #fff;
+            }
+        .refer h3.active {
+                box-shadow: inset 0 5px 0 0 #0bc56b;
+            }
         .refer table {
             width: 100%;
             border: 1px solid #aaa;
@@ -117,6 +123,7 @@
         }
         .link li {
             list-style: none;
+            display: inline-block;
         }
         .link li a {
             color: #fff;
@@ -128,6 +135,21 @@
         }
         .link li a:hover {
             background: #00DB72;
+        }
+        .page {
+            text-align: right;
+            margin-bottom: 3px;
+        }
+        .page li {
+            display: inline;
+            list-style: none;
+        }
+        .page li a {
+            text-decoration: none;
+            color: #222;
+        }
+        .page li a:hover{
+            color: #00DB72;
         }
         @media (max-width:1220px){
             #content{
@@ -177,11 +199,23 @@
 
     <main id="content">
         <h2>HTML <em>래퍼런스 북</em></h2>
-        <ul class="link">
-            <li><a href="../java script/javascript603-1.html">HTML 속성 첫 글자 검색하기</a></li>
+        <ul class="page">
+            <li><a href="#">HTML</a></li>
+            <li><a href="../refer-css/index.html">CSS</a></li>
+            <li><a href="../java script/javascript100.html">JAVASCRIPT</a></li>  
         </ul>
         <section class="refer">
-            <h3>Alphabet</h3>
+            <h3 class="active"><a href =index.html>Alphabet</a></h3>
+            <h3><a href="index2.html">Topics</a></h3>
+            <ul class="link">
+                <li><a href="#sample01">섹션</a></li>
+                <li><a href="#sample01">텍스트</a></li>
+                <li><a href="#sample01">목록</a></li>
+                <li><a href="#sample01">테이블</a></li>
+                <li><a href="#sample01">이미지</a></li>
+                <li><a href="#sample01">미디어</a></li>
+                <li><a href="#sample01">폼</a></li>
+            </ul>
             <table>
                 <colgroup>
                     <col style="width: 30%">
