--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
                         <!-- box -->
                     <section class="color-shape class">
-                        <a href="java script/javascript100.html" target="_blank">
+                        <a href="java script/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">JAVASCRIPT</span>
