--- a/java script/javascriptRefer03.html
+++ b/java script/javascriptRefer03.html
@@ -37,6 +37,7 @@
         }
 
         h1 {
+            padding-top: 40px;
             padding-bottom: 20px;
         }
         h1 a {
@@ -219,6 +220,9 @@
             border-style: solid;
         }
         @media (max-width : 800px) {
+            h1 {
+                text-align: center;
+            }
             .menu li a {
                 font-size: 12px;
                 padding: 5px 20px;
